--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,9 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'io.reactivex:rxandroid:1.2.1'
 
-    compile "com.google.dagger:dagger:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-
-    compile "com.google.dagger:dagger-android:$dagger_version"
-    compile "com.google.dagger:dagger-android-support:$dagger_version"
-    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    compile 'com.google.dagger:dagger:2.+'
+    kapt "com.google.dagger:dagger-compiler:2.+"
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.+'
 
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
@@ -61,9 +58,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile 'io.github.kobakei:ratethisapp:1.2.0'
-
-    // Resolve conflicts for android test compilation
-    androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
 }
 repositories {
     mavenCentral()
